# kokoro-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devlogs.md
.dingllm/: serve.py
.dingllm/prds/v2-rust-port/: 000_overview.md  001_text_pipeline.md  002_onnx_inference.md  003_kokoro_api.md  004_voice_pack_parsing.md  005_cli_and_audio.md  006_types_errors.md  007_testing_migration.md
.dingllm/specs/v1/: 001_context_flowchart_kokoro.mmd  002_container_flowchart_kokoro.mmd  003_component_flowchart_kokoro_lib.mmd  004_component_sequence_generate.mmd  _manifest.md
crates/kokoro/: Cargo.toml  build.rs
crates/kokoro-cli/: Cargo.toml
crates/kokoro-cli/src/: main.rs
crates/kokoro/examples/: phoneme_debug.rs
crates/kokoro/src/: cache.rs  error.rs  kokoro.rs  lib.rs  model.rs  normalize.rs  phonemes.rs  types.rs  vocab.rs  voice.rs
scripts/: convert_voices.py
