[package]
name = "kokoro-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kokoro-tts"
path = "src/main.rs"

[dependencies]
kokoro = { path = "../kokoro" }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
rodio = "0.20"
hound = "3"
