[package]
name = "kokoro"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = "2.0.0-rc.12"
regex = "1"
hound = "3"
ureq = "2"
dirs = "5"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ndarray = "0.17"
fancy-regex = "0.18.0"

[build-dependencies]
pkg-config = "0.3"
